--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,6 @@
 	<classpathentry kind="lib" path="lib/json-lib-2.3-jdk13.jar"/>
 	<classpathentry kind="lib" path="lib/jsoup-1.8.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/sqljdbc42.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
